--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "undo": "npx sequelize-cli db:migrate:undo",
-    "seed": "npx sequelize-cli seed:generate --name demo-user",
+    "down": "npx sequelize-cli db:migrate:undo",
+    "make-seed": "npx sequelize-cli seed:generate --name demo-user",
     "migrate": "npx sequelize-cli db:migrate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed":"npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "momment": "0.0.1",
-    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.18.0"
